# protosnirk

./: .travis.yml  Cargo.toml  LICENSE  README.md  protosnirk.ohm
derive_integration_tests/: Cargo.toml
derive_integration_tests/src/: lib.rs
docs/: CNAME  modules.md  syntax.md
src/: example.rs  lib.rs  modules.md  syntax.md  tests.rs
src/ast/: expression.rs  index.rs  item.rs  mod.rs  operator.rs  stmt.rs  types.rs
src/check/: ast_visitor.rs  collector.rs  errors.rs  id.rs  mod.rs  program.rs  program_checker.rs  scope_index.rs  symbol.rs  symbol_checker.rs  tests.rs  unit_checker.rs  verification_result.rs  verifier.rs
src/compile/: chunk_creator.rs  compiler.rs  constant_table.rs  context.rs  mod.rs  module_compiler.rs  module_provider.rs  register_table.rs  tests.rs
src/identify/: concrete_type.rs  mod.rs  scope_builder.rs  tests.rs  type_builder.rs  type_scope_builder.rs
src/lex/: error_codes.rs  errors.rs  expression.rs  grapheme_tokenizer.rs  ident.rs  lexer.rs  literal.rs  mod.rs  newtok.rs  parser.rs  pratt.rs  precedence.rs  span.rs  symbol.rs  tests.rs  textiter.rs  token.rs  tokenizer.rs  tokens.rs
src/lint/: mod.rs  usage_checker.rs
src/llvm/: basic_block.rs  builder.rs  context.rs  mod.rs  module.rs  orc.rs  pass_manager.rs  target.rs  types.rs  util.rs  value.rs
src/parse/: ast_visitor.rs  errors.rs  expression.rs  index.rs  mod.rs  operator.rs  parser.rs  precedence.rs  program.rs  scope.rs  scoped_id.rs  symbol.rs  tests.rs  types.rs
src/pipeline/: mod.rs
src/run/: chunk.rs  instruction.rs  jit.rs  llvm_runner.rs  llvm_state.rs  mod.rs  value.rs  vm.rs
src/typeinfer/: concrete_type.rs  inference_source.rs  inferred_type.rs  item_collector.rs  mod.rs
src/visit/: default.rs  mod.rs  visitor.rs  walk.rs
tests/: integration.rs  parser.rs  tokenizer.rs
tests/lex/: all-keywords.input  (+7 more)
(+210 files in other folders)
