[package]
name = "protosnirk"
description = "An in-progress simple programming language implemented in Rust"
version = "0.0.1"
repository = ""
keywords = ["protosnirk", "programming", "scripting", "language"]
readme = "README.md"
authors = ["Snirk Immington <snirk.immington@gmail.com>"]
license = "MIT"

[dependencies]
maplit = "*"
unicode_categories = "0.1"
llvm-sys = "^60"
log = "0.4"
env_logger = "0.5"
libc = "0.2"
smallvec = "0.6"
petgraph = "0.4"

[dev-dependencies]
lazy_static = "1"
