[package]
name = "protosnirk"
description = "An in-progress programming language implemented in Rust"
version = "0.0.1"
repository = "https://github.com/immington-industries/protosnirk"
keywords = ["protosnirk", "snirk", "programming", "language"]
readme = "README.md"
authors = ["Snirk Immington <snirk.immington@gmail.com>"]
license = "MIT"

[dependencies]
maplit = "^1"
unicode_categories = "^0.1"
llvm-sys = "^60"
log = "^0.4"
env_logger = "^0.5"
libc = "^0.2"
smallvec = "^0.6"
petgraph = "^0.4"

[dev-dependencies]
derive_integration_tests = { path = "derive_integration_tests" }
