[package]
name = "protosnirk"
description = "An in-progress programming language implemented in Rust"
version = "0.0.1"
repository = "https://github.com/immington-industries/protosnirk"
keywords = ["protosnirk", "snirk", "programming", "language"]
readme = "README.md"
authors = ["Snirk Immington <snirk.immington@gmail.com>"]
license = "MIT"

[dependencies]
maplit = "^1"
unicode_categories = "^0.1"
llvm-sys = "^60"
log = "^0.4"
libc = "^0.2"
smallvec = "^0.6"
petgraph = "^0.4"

[dev-dependencies]
env_logger = { version = "^0.6", default-features = false }
derive_integration_tests = { path = "derive_integration_tests" }
